--- a/css/form2.css
+++ b/css/form2.css
@@ -10,7 +10,7 @@
 
 .box{
     width: 600px;
-    height: 850px;
+    height: 900px;
     border: 1px solid;
     border-radius: 10px 10px 10px 10px;
     border-color: rgb(218, 218, 218);
@@ -27,4 +27,31 @@
     width: 550px;
     padding: 5px;
     
+}
+
+.nennrei{
+    text-align: center;
+    border: 2px solid;
+    border-radius: 4px 4px 4px 4px;
+    border-color: rgb(220, 219, 219);
+    box-shadow: 1px 1px 1px rgb(204, 204, 204);
+    width: 50px;
+    padding: 5px;
+
+}
+
+.goiken{
+    border: 2px solid;
+    border-radius: 4px 4px 4px 4px;
+    border-color: rgb(220, 219, 219);
+    box-shadow: 1px 1px 1px rgb(204, 204, 204);
+}
+
+.hissu::after{
+    content: "必須";
+    color: #ffffff;
+    background: #cc0000;            
+    padding: 0.3em;
+    border-radius: 0.5em;
+    margin-left:0.3em;
 }
